--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <h1>Vanilla Weather App</h1>
 
     <footer>
-      This page was coded by Adriana Cividini and it's open source on Github
+      This page was coded by
+      <a href="https://dricividini.netlify.app/">Adriana Cividini</a> and it's
+      open source on
+      <a href="https://github.com/AdrianaCividini" target="_blank">Github.</a>
     </footer>
   </body>
 </html>
