--- a/index.html
+++ b/index.html
@@ -6,10 +6,25 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Vanilla Weather App</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city..." />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+
+    <main>
+      <h1>Barcelona</h1>
+      <div>
+        <p>Friday 11:02, sunny day</p>
+        <br />
+        <p>humidity: 40%, Wind: 4km/h</p>
+      </div>
+      <div>20° 🌞</div>
+    </main>
 
     <footer>
-      This page was coded by
+      This project was coded by
       <a href="https://dricividini.netlify.app/">Adriana Cividini</a> and it's
       open source on
       <a href="https://github.com/AdrianaCividini" target="_blank">Github.</a>
