Style the main container.

--- a/index.html
+++ b/index.html
@@ -3,31 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Reddit+Sans:ital,wght@0,200..900;1,200..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="index.css" />
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city..." />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
+    <div class="vanilla-app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city..." />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
 
-    <main>
-      <h1>Barcelona</h1>
-      <div>
-        <p>Friday 11:02, sunny day</p>
-        <br />
-        <p>humidity: 40%, Wind: 4km/h</p>
-      </div>
-      <div>20° 🌞</div>
-    </main>
+      <main>
+        <h1>Barcelona</h1>
+        <div>
+          <p>Friday 11:02, sunny day</p>
+          <br />
+          <p>humidity: 40%, Wind: 4km/h</p>
+        </div>
+        <div>20° 🌞</div>
+      </main>
 
-    <footer>
-      This project was coded by
-      <a href="https://dricividini.netlify.app/">Adriana Cividini</a> and it's
-      open source on
-      <a href="https://github.com/AdrianaCividini" target="_blank">Github.</a>
-    </footer>
+      <footer>
+        This project was coded by
+        <a href="https://dricividini.netlify.app/">Adriana Cividini</a> and it's
+        open source on
+        <a href="https://github.com/AdrianaCividini" target="_blank">Github.</a>
+      </footer>
+    </div>
   </body>
 </html>
