--- a/index.html
+++ b/index.html
@@ -9,26 +9,44 @@
       href="https://fonts.googleapis.com/css2?family=Reddit+Sans:ital,wght@0,200..900;1,200..900&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <link rel="stylesheet" href="index.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="vanilla-app">
       <header>
-        <form>
-          <input type="search" placeholder="Enter a city..." />
-          <input type="submit" value="Search" />
+        <form class="search-form" id="search-form">
+          <input
+            type="search"
+            placeholder="Enter a city..."
+            required
+            id="search-form-input"
+            class="search-form-input"
+          />
+          <input type="submit" value="Search" class="search-form-button" />
         </form>
       </header>
 
       <main>
-        <h1>Barcelona</h1>
-        <div>
-          <p>Friday 11:02, sunny day</p>
-          <br />
-          <p>humidity: 40%, Wind: 4km/h</p>
+        <div class="weather-app-data">
+          <div>
+            <h1 class="weather-app-city" id="city"></h1>
+            <p class="weather-app-details">
+              <strong id="time"></strong>,
+              <span id="description"></span>
+              <br />
+              humidity: <strong id="humidity"></strong> Wind:
+              <strong id="wind"></strong>
+            </p>
+          </div>
+          <div class="weather-itens-container">
+            <div class="weather-icon">🌞</div>
+            <div class="weather-app-temperature" id="temperature"></div>
+            <div class="weather-unit">°C</div>
+          </div>
         </div>
-        <div>20° 🌞</div>
       </main>
 
       <footer>
@@ -38,5 +56,6 @@
         <a href="https://github.com/AdrianaCividini" target="_blank">Github.</a>
       </footer>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
