Added the icon.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </p>
           </div>
           <div class="weather-itens-container">
-            <div class="weather-icon">🌞</div>
+            <div id="icon"></div>
             <div class="weather-app-temperature" id="temperature"></div>
             <div class="weather-unit">°C</div>
           </div>
