--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div>
             <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
-              <strong id="time"></strong>,
+              <span id="time"></span>,
               <span id="description"></span>
               <br />
               humidity: <strong id="humidity"></strong> Wind:
@@ -45,6 +45,24 @@
             <div id="icon"></div>
             <div class="weather-app-temperature" id="temperature"></div>
             <div class="weather-unit">°C</div>
+          </div>
+        </div>
+        <div class="weather-forecast">
+          <div class="row">
+            <div class="col-2">
+              <div class="forecast-date">Sun</div>
+              <div class="forecast-img">
+                <img
+                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-day.png"
+                  alt=""
+                  width="53"
+                />
+              </div>
+              <div class="forecast-temperatures">
+                <span class="max-temperature">30°</span>
+                <span class="min-temperature">19°</span>
+              </div>
+            </div>
           </div>
         </div>
       </main>
