Finished JS project.

--- a/index.html
+++ b/index.html
@@ -47,24 +47,7 @@
             <div class="weather-unit">°C</div>
           </div>
         </div>
-        <div class="weather-forecast">
-          <div class="row">
-            <div class="col-2">
-              <div class="forecast-date">Sun</div>
-              <div class="forecast-img">
-                <img
-                  src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-day.png"
-                  alt=""
-                  width="53"
-                />
-              </div>
-              <div class="forecast-temperatures">
-                <span class="max-temperature">30°</span>
-                <span class="min-temperature">19°</span>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="weather-forecast" id="forecast"></div>
       </main>
 
       <footer>
